infrastructure/kitos-dev/kitos/services/kitos-broker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    easyhosting.io/service-reference: PubSub.Broker/Dockerfile
    easyhosting.io/service-unique-id: 7d035b18-e250-468a-9a04-2fdb86db9e4a
    easyhosting.io/easy-hosting-domain-name: 7d035b18-e250-468a-9a04-2fdb86db9e4a.kitos-dev.strongminds.easyhosting.strongminds.dev
  labels:
    app: kitos-broker
  name: kitos-broker
  namespace: kitos
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kitos-broker
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "false"
      labels:
        app: kitos-broker
    spec:
      containers:
      - env:
        - name: RABBITMQ_DEFAULT_USER
          valueFrom:
            secretKeyRef:
              key: RabbitMqUsername
              name: user-secret
        - name: RABBITMQ_DEFAULT_PASS
          valueFrom:
            secretKeyRef:
              key: RabbitMqPassword
              name: user-secret
        image: ghcr.io/strongminds/kitos-kitos-broker:sha-65ed1c8c9ad8ee85811715457df70584a6bd50be
        name: kitos-broker
        ports:
        - containerPort: 5672
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 100m
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: kitos-broker-volume
          readOnly: false
      imagePullSecrets:
      - name: 90d73529-a238-405b-a079-3eea2e8e36e6
      volumes:
      - name: kitos-broker-volume
        persistentVolumeClaim:
          claimName: kitos-broker-volume
          readOnly: false
